# ocr-nes

./: .gitignore  Makefile  README.md  imgui.ini
core/: CMakeLists.txt  Makefile
core/include/: bus.h  cartridge.h  common.h  cpu.h  drawable.h  mapper.h  nes.h  ppu.h
core/include/mappers/: mapper_000.h  mapper_001.h  mapper_002.h  mapper_003.h  mapper_004.h  mapper_066.h
core/src/: bus.cpp  cartridge.cpp  cpu.cpp  mapper.cpp  ppu.cpp
core/src/mappers/: mapper_000.cpp  mapper_001.cpp  mapper_002.cpp  mapper_003.cpp  mapper_004.cpp  mapper_066.cpp
frontend/: CMakeLists.txt  Makefile  imgui.ini
frontend/src/: app.cpp  app.h  config.cpp  config.h  emulator.cpp  emulator.h  main.cpp
frontend/src/gui/: gui.cpp  gui.h  imconfig.h
frontend/src/input/: bitmask.cpp  bitmask.h  input.cpp  input.h
renderer/: sfml.h
